Label switching and posterior summary
Exploration of label switching problem (if it is a problem) and ideas
about how to summarize the posterior.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+## LaTeX files to ignore
+##
+*.aux
+*.log
+*.synctex.gz
+
+## ignore figure directory from knitr()
+##
+figure*
+
+## Miscellaneous files to ignore
+##
+temp.txt
+*~
+
+## R files to ignore
+##
+.Rapp.history
 .Rproj.user
 .Rhistory
 .RData
