--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@
 ##
 figure/*
 
-## Ignore R presentation directory
-dim-reduction-presentation/*
+## Ignore R presentation files (other than source)
 dimension-reduction-presentation.md
+dimension-reduction-presentation.html
+dimension-reduction-presentation-figure/
+dimension-reduction-presentation_files/
 
 ## Miscellaneous files to ignore
 ##
